Add 413 as a possible response for /config/import
